<resources>
    <string name="app_name">Broovis-Delivery</string>
    <string name="lbl_join_us">Join us / Sign in</string>
    <string name="lbl_desc_joinus">Enter to continue and explore within</string>
    <string name="lbl_mobile">Mobile Number</string>
    <string name="lbl_mobile_alternative">Alternative Mobile Number</string>
    <string name="lbl_continue">Continue</string>
    <string name="lbl_send_otp">Otp Has Been Sent On Your Register Mobile Number</string>
    <string name="lbl_term_privacy">By login in you accept our Terms of Use and Privacy Policy</string>
    <string name="lbl_verify_number">Verify Your Number</string>
    <string name="lbl_otp_verify">Enter the 4-digit code we sent to you</string>
    <string name="lbl_resend_otp">Resend OTP</string>
    <string name="lbl_under_review_profile">Great, Rider! \nYour Profile is under review.</string>
    <string name="lbl_under_review_profile_desc">your submission has been received, our team will shortly contact you.</string>
    <string name="lbl_name">Name</string>
    <string name="lbl_email">Email</string>
    <string name="lbl_female">Female</string>
    <string name="lbl_male">Male</string>
    <string name="lbl_gender">Gender</string>
    <string name="lbl_licence">I have Licence</string>
    <string name="lbl_profile_registered">Successfully Registered</string>
    <string name="lbl_profile_Update">Profile Updated Successfully</string>
    <string name="lbl_save">Save</string>
    <string name="lbl_current_address_update">Current Address Update</string>
    <string name="lbl_permanent_address_update">Permanent Address Update</string>
    <string name="lbl_update">Update</string>
    <string name="lbl_profile">Profile</string>
    <string name="lbl_location_desc">Set you Location to start exploring Orders and Managing this application</string>
    <string name="lbl_enable_location">Enable Location</string>
    <string name="lbl_menu_home">Home</string>
    <string name="lbl_menu_profile">Profile</string>
    <string name="lbl_notifications">Notifications</string>
    <string name="lbl_clear_all">Clear All</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lbl_profile_settings">Profile Settings</string>
    <string name="lbl_profile_settings_desc">Change Your Basic Profile</string>
    <string name="lbl_document_verifications">Document Verifications</string>
    <string name="lbl_verified">Verified</string>
    <string name="lbl_my_address">My Address</string>
    <string name="lbl_your_addresses">Your Addresses</string>
    <string name="lbl_bank_account_details">Bank Account Details</string>
    <string name="lbl_bank_acc_desc">Receiving Your Payment</string>
    <string name="lbl_refer_app">Refer App</string>
    <string name="lbl_share_app_desc">Share this link with friends to support</string>
    <string name="lbl_help_amp_support"><![CDATA[Help & Support]]></string>
    <string name="lbl_get_support_from_us">Get support from us</string>
    <string name="lbl_term_privacy_amp_policy"><![CDATA[Term, Privacy, & Policy]]></string>
    <string name="lbl_term_desc">Things You may want know</string>
    <string name="lbl_logout">Logout</string>
    <string name="lbl_add_address">Add Address</string>
    <string name="lbl_address_detail">Address Detail</string>
    <string name="lbl_flat_no_building_name">Flat No/ Building Name*</string>
    <string name="lbl_locality_area_street">Locality/Area/Street*</string>
    <string name="lbl_address">Address*</string>
    <string name="lbl_state">State*</string>
    <string name="lbl_city">City*</string>
    <string name="lbl_zip_code">Zip Code or Pin Code*</string>
    <string name="lbl_get_address_flat_no_building_name">Flat No/ Building Name</string>
    <string name="lbl_get_address_locality_area_street">Locality/Area/Street</string>
    <string name="lbl_get_address_address">Address</string>
    <string name="lbl_get_address_state">State</string>
    <string name="lbl_get_address_city">City</string>
    <string name="lbl_get_address_zip_code">Zip Code or Pin Code</string>
    <string name="lbl_permanent_address">Permanent Address</string>
    <string name="lbl_current_address">Current Address</string>
    <string name="same_as_current_address">Same as Current Address</string>
    <string name="lbl_do_you_have_bank_account">Do you have bank Account?</string>
    <string name="lbl_search">  Search</string>
    <string name="lbl_choose_bank">Choose Bank*</string>
    <string name="title_bank_details">Bank Details</string>
    <string name="title_bank_list">Bank List</string>
    <string name="lbl_bank_account_number">Bank Account Number*</string>
    <string name="lbl_beneficiary_name">Beneficiary Name*</string>
    <string name="lbl_branch_name">Branch Name*</string>
    <string name="lbl_ifsc_code">IFSC Code*</string>
    <string name="lbl_branch_code">Branch Code</string>
    <string name="lbl_micr_code">Micr Code</string>
    <string name="cheque_photo_or_bank_statement">Cheque photo or Bank Statement</string>
    <string name="upload_checque_desc">Upload your account cancel cheque or blank cheque or Bank statement photo for account number confirmation</string>
    <string name="upload_bank_detail_checkbox">Accept that all the information you attached here is true and are of the vehicle that are using for the BROOVIS delivery</string>
    <string name="lbl_document">Document</string>
    <string name="document_upload_desc">Accept that all the information you attached here is true and are of the vehicle that are using for the BROOVIS delivery</string>
    <string name="lbl_rc_book">RC Book</string>
    <string name="rc_book_desc">Upload your Vehicle RC Book in jpg or pdf format \nMaximum file size is 2mb</string>
    <string name="lbl_pancard">PanCard</string>
    <string name="pan_desc">Upload your PanCard in jpg or pdf formate \nMaximum file size is 2mb</string>
    <string name="lbl_driving_license">Driving License</string>
    <string name="dl_desc">Upload your Driving License in jpg or \nPdf format Maximum file size is 2mb</string>
    <string name="aadhar_card_verification">Aadhar Card Verification</string>
    <string name="aadhar_desc">Upload your aadhar card in jpg or \nPdf format Maximum file size is 2mb</string>
    <string name="lbl_order_delivered">Order Delivered</string>
    <string name="lbl_new_subscribers">New Subscribers</string>
    <string name="lbl_delivery">Delivery</string>
    <string name="lbl_cancel_delivery">Cancel Delivery</string>
    <string name="lbl_on_going_order">On Going Orders</string>
    <string name="lbl_delivered">Delivered</string>
    <string name="lbl_delivery_time">Delivery Time</string>
    <string name="lbl_order_id">Order Number</string>
    <string name="lbl_map">Map</string>
    <string name="lbl_set_mpin">Set Mpin</string>
    <string name="msg_set_mpin_successfully">Mpin Successfully Set</string>
    <string name="lbl_verify_mpin">Verify Mpin</string>
    <string name="msg_login_with_mpin">Login Successfully</string>
    <string name="lbl_login_with_mpin">Login with Mpin</string>
    <string name="set_the_4_digit_mpin">Set the 4-digit Mpin</string>
    <string name="enter_4_digit_mpin">Enter 4-digit Mpin</string>
    <string name="lbl_reset_in">Reset Mpin</string>
    <string name="lbl_vacation">Vacation</string>
    <string name="lbl_not_delivered">Not Delivered</string>
    <string name="lbl_apply">Apply</string>
    <string name="lbl_vacation_verify">Verify Customer\nVacation mode request</string>
    <string name="lbl_verify_vacation">Enter 4-digit code we sent you</string>
    <string name="lbl_title_not_del">Choose or type your \nreason for not delivered</string>
    <string name="lbl_enter_reason">Enter other reasons</string>
    <string name="lbl_submit">Submit</string>
    <string name="msg_something_went_wrong">Something went wrong, Please try again.</string>
    <string name="lbl_privacy_policy">Privacy Policy</string>
    <string name="lbl_terms_of_service">Terms of service</string>
    <string name="lbl_seconds">seconds</string>
    <string name="lbl_resend_in">Resend OTP in </string>
    <string name="last_name">Last name</string>
    <string name="first_name">First name</string>
    <string name="last_month">Last Month</string>
    <string name="last_week">Last Week</string>
    <string name="recent">Recent</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="lbl_upload_driving_license_photo">Upload Driving Licence Photo</string>
    <string name="lbl_upload_aadhar_card_photo">Upload Aadhar card Photo</string>
    <string name="dec_upload_driving_lincense">Upload Front and Back side of your driving licence in jpg or Pdf formate</string>
    <string name="lbl_licence_number">Licence Number*</string>
    <string name="lbl_licence_user_name">User Name as par Licence Name*</string>
    <string name="lbl_licence_regi_date">Licence Registration Date*</string>
    <string name="lbl_licence_ex_date">Licence Expiry Date*</string>
    <string name="lbl_name_on_aadhar_card">Name on Aadhar card*</string>
    <string name="lbl_number_on_aadhar_card">Number on Aadhar card*</string>
    <string name="dec_upload_aadhar_card">Upload Front and Back side of your aadhar card in jpg or Pdf formate</string>
    <string name="lbl_number">Number</string>
    <string name="lbl_name_pancard">Name</string>
    <string name="lbl_upload_pacard_photo">upload PanCard photo</string>
    <string name="dec_upload_pan_card">Upload Front and Back side of your panCard in jpg or Pdf formate</string>
    <string name="lbl_front_side">Front Side</string>
    <string name="lbl_back_side">Back Side</string>
    <string name="lbl_Please_enter_username">Please enter User Name.</string>
    <string name="lbl_Please_enter_licenceNumber">Please enter licenceNumber.</string>
    <string name="lbl_Please_enter_licenceNumber_validation">Please enter this type number 2 character , 2 number and 11 number! Ex. HR06 19850034761!</string>
    <string name="lbl_Please_enter_licence_registration_date">Please enter License Registration Date.</string>
    <string name="lbl_Please_enter_licence_expiry_date">Please enter License Expiry Date!</string>
    <string name="lbl_Please_select_licence_type">Please Select License Type.</string>
    <string name="lbl_spiner_licence_type">Licence Type</string>
    <string name="lbl_Please_upload_licence_Imag">Please upload Licence Image.</string>
    <string name="msg_upload_licence">Licence Successfully Uploaded</string>
    <string name="msg_upload_licence_update">Licence Successfully Updated</string>
    <string-array name="LicenceType">
        <item>Two Wheeler</item>
        <item>Light Weight Motor</item>
        <item>Heavy</item>
    </string-array>
    <string name="lbl_Please_enter_aadhaarcardusername">Please enter your user name as per Aadhaar Card.</string>
    <string name="lbl_Please_enter_aadhaarcardNumber">Please enter AadhaarCard number.</string>
    <string name="lbl_Please_enter_aadhaarcardNumber_validation">Please enter this type number First number 2-9,3 number 0-9,4 number 0-9 and 4 number 0-9 Ex.2587 3732 9885.</string>
    <string name="lbl_Please_upload_aadhaarcard_Imag">Please upload Aadhaar card image!</string>
    <string name="msg_upload_aadhaarcard">Aadhaarcard Successfully Uploaded</string>
    <string name="msg_upload_aadhaarcard_update">Aadhaarcard Successfully Updated</string>
    <string name="lbl_Please_flat_no">Please enter flat no or building name.</string>
    <string name="lbl_Please_area">Please enter locality or area or street.</string>
    <string name="lbl_ok">OK</string>
    <string name="msg_login_again">Login Again</string>
    <string name="msg_your_session_has_been_expired">Your Session has been expired</string>
    <string name="lbl_terms_conditions">Terms &amp; conditions</string>
    <string name="lbl_read_privacy_policy">Read our policy</string>
</resources>