<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data class="InvalidUserBottomSheetFragmentBinding" />

    <RelativeLayout
        android:id="@+id/rootFrameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".ui.fragment.CheckAppliedVacationDialogFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/titleTxtView"
                style="@style/FourteenwithBlackTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_16sdp"
                android:text="@string/msg_login_again"
                android:textAlignment="center" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/msgTxtView"
                style="@style/TwelveTextSemiboldTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_8sdp"
                android:text="@string/msg_your_session_has_been_expired"
                android:textAlignment="center" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/okBtn"
                style="@style/MaterialButtonStyle"
                android:layout_width="@dimen/_150sdp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_16sdp"
                android:text="@string/lbl_ok"
                android:textColor="@color/white"
                android:textStyle="bold" />

        </LinearLayout>
    </RelativeLayout>
</layout>

