<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.activity.MPINActivity">

    <data class="MPINActivityBinding" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/verificationACTxtView"
            style="@style/TwentyFourBlackNormalTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/lbl_set_mpin" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/verificationmsgACTxtView"
            style="@style/TwelvewithgrayTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:text="@string/set_the_4_digit_mpin"
            android:textAlignment="center" />

        <com.chaos.view.PinView
            android:id="@+id/mPinView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_16sdp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:inputType="number"
            android:textColor="@color/black"
            android:textSize="@dimen/_18sdp"
            android:textStyle="bold"
            app:cursorWidth="@dimen/_2sdp"
            app:itemRadius="@dimen/_5sdp"
            app:itemSpacing="@dimen/_8sdp"
            app:lineColor="@color/color_box"
            app:lineWidth="@dimen/_1sdp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/verifyPINBtn"
            style="@style/BlackBackgroundRegularButtonTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_16sdp"
            android:stateListAnimator="@null"
            android:text="@string/lbl_continue"
            android:textAllCaps="false" />
    </LinearLayout>
</layout>